--- a/POS/src/main/resources/application.properties
+++ b/POS/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=POS
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@cluster0.8khqvx3.mongodb.net/
 spring.data.mongodb.database=grocery-store
