--- a/Inventory/src/main/resources/application.properties
+++ b/Inventory/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Inventory
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_USER}:${MONGODB_PASS}@cluster0.8khqvx3.mongodb.net/
+spring.data.mongodb.database=grocery-store
